<?xml version="1.0" encoding="utf-8"?><!--
 Copyright (C) 2013 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Sensor Data:</string>
    <string name="label_device_address">Device Address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">ABBI Remote: BLE Device Scan</string>
    <string name="device_control">ABBI Remote: Device Control</string>
    <string name="title_activity_advanced_options">ABBI Remote: Advanced Options</string>
    <string name="advanced">Advanced Options</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="battery">Battery</string>
    <string name="volume"><b>Volume</b></string>
    <string name="mute">Mute</string>
    <string name="mode">Mode</string>
    <string name="continuous">Continuous</string>
    <string name="intermittent">Intermittent</string>
    <string name="playback">Playback</string>
    <string name="properties">Properties</string>
    <string name="pitch"><b>Frequency</b></string>
    <string name="bpm">BPM</string>
    <string name="save">Save</string>
    <string name="stream1">Stream 1</string>
    <string name="stream2">Stream 2</string>
    <string name="scan">Scan for ABBI devices</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_continuous">ABBI Remote: Continuous Sound Properties</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_intermittent">ABBI Remote: Intermittent Sound Properties</string>
    <string name="title_activity_playback">ABBI Remote: Sound Playback Properties</string>

    <string name="about"><![CDATA[
                                <p><a href="https://www.abbiproject.eu/">www.abbiproject.eu</a></p>
                                <i>An Android application used to control the ABBI bracelet developed by IIT
                                 (Italian Institute of Technology). The project follows the client-server software development paradigm.
                                  The server is going to be tied to a central data store and communicate with the Android app via a REST API.</i>]]></string>
    <string name="menu_info">About</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="close">Close</string>

    <!-- Descriptions -->
    <string name="volumeDesc">This slider can be used to control the volume of the sound the ABBI bracelet emits.</string>
    <string name="pitchDesc">Use the circular slider to modify the sound frequency (this will result in a change of the sound pitch.)</string>
    <string name="imageABBIDesc">Select an item from this list to connect to a Bluetooth device.</string>
    <string name="deviceAddressDesc">This field displays the identifier of the ABBI bracelet the device is currently connected to.</string>
    <string name="deviceStateDesc">This field shows the current state of the ABBI bracelet (connected/disconnected).</string>
    <string name="deviceDataDesc">This field shows additional data parameters received from the ABBI bracelet.</string>
    <string name="batteryDesc">Battery level is displayed in order to allow users to charge their bracelet whenever the its battery power is running low.</string>
    <string name="soundOnOffDesc">This switch can be used to test the configured sound output from the bracelet.</string>
    <string name="muteOnOffSwitch">This switch can be used to mute/ unmute the bracelet whenever users require this.</string>
    <string name="speakerVolumeDesc">The bracelet\'s speaker volume output can be controlled from this circular slider.</string>
    <string name="continuousSoundDesc">This option configures the sound output to be continuous.</string>
    <string name="intermittentSoundDesc">This option configures the sound output to be intermittent, further settings such as frequency and stream volume can be specified.</string>
    <string name="playbackSoundDesc">Users can choose a sound file from a list of options to be used as the main sound output for the bracelet they are using.</string>
    <string name="propertiesDesc">This button displays more properties related to the sound playback mode the user has selected.</string>
    <string name="bpmDesc">Use the circular slider to control the bracelet\'s bpm (beats per minute). Available only for the intermittent sound mode.</string>
    <string name="streamDesc">Make the sound output configuration for one of the streams reflect the settings for the other.</string>

</resources>