<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutInfo">

        <LinearLayout android:orientation="horizontal"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="10dp">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/label_device_address"
                      android:textSize="18sp"/>
            <Space android:layout_width="5dp"
                   android:layout_height="wrap_content"/>
            <TextView android:id="@+id/device_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout android:orientation="horizontal"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="10dp">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/label_state"
                      android:textSize="18sp"/>
            <Space android:layout_width="5dp"
                   android:layout_height="wrap_content"/>
            <TextView android:id="@+id/connection_state"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/disconnected"
                      android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout android:orientation="horizontal"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="10dp">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/label_data"
                      android:textSize="18sp"/>
            <Space android:layout_width="5dp"
                   android:layout_height="wrap_content"/>
            <TextView android:id="@+id/data_value"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/no_data"
                      android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutBattery"
        android:layout_margin="5dp">
        <ImageView
            android:src="@drawable/ic_battery_full"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:id="@+id/iconBattery"
            android:adjustViewBounds="true" />
        <ImageView
            android:src="@anim/battery_animation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:id="@+id/animBattery"
            android:visibility="gone" />
        <TextView
            android:text="@string/battery"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textView1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="36dip"
            android:id="@+id/linearLayout4"
            android:background="@android:drawable/progress_horizontal"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_gravity="center_vertical">
            <View
                android:layout_weight="0.25"
                android:background="@drawable/roundrectred"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/view1"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />
            <View
                android:layout_weight="0.25"
                android:background="@drawable/roundrectyell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/view2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />
            <View
                android:layout_weight="0.25"
                android:background="@drawable/roundrectgreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/view3"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />
            <View
                android:layout_weight="0.25"
                android:background="@drawable/roundrectgreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/view4"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:alpha="0" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutMute"
        android:layout_margin="10dp">
        <ImageView
            android:src="@drawable/mute"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:id="@+id/iconPower" />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/switch1"
            android:text="@string/mute"
            android:checked="false"
            android:layout_marginLeft="10dp" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutVolume"
        android:layout_margin="10dp">
        <ImageView
            android:src="@drawable/volume"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:adjustViewBounds="true" />
        <TextView
            android:text="@string/volume"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textView2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textAlignment="center" />
        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="15"
            android:progress="1"
            android:fitsSystemWindows="true"
            android:layout_gravity="center_vertical" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutAudioMode">
        <TextView
            android:text="@string/mode"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textView3"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/radioGroup1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/continuous"
                android:id="@+id/radioSoundContinuous" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intermittent"
                android:id="@+id/radioSoundIntermmitent" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playback"
                android:id="@+id/radioSoundPlayback" />
        </RadioGroup>
        <Button
            android:text="@string/properties"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/buttonSoundProperties" />
    </LinearLayout>
    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButton1"
        android:background="@drawable/red_button"
        android:layout_margin="25dp"
        android:minHeight="120dp" />

</LinearLayout>